--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
 	"dependencies": {
 		"@aws-sdk/client-cognito-identity": "^3.9.0",
 		"@aws-sdk/client-cognito-identity-provider": "^3.10.0",
+		"bootstrap": "^5.0.2",
 		"mongodb": "^3.6.5",
 		"next": "^10.0.9",
 		"node-fetch": "^2.6.1",
 		"react": "^17.0.2",
+		"react-bootstrap": "^1.6.1",
 		"react-dom": "^17.0.2",
+		"sass": "^1.35.1",
 		"showdown": "^1.9.1",
 		"xml2js": "^0.4.23"
 	}
